--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "eslint": "^6.3.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {}
